[WED-263] Fix close button being overlapped in mobile res

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/_modals.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/_modals.scss
@@ -44,6 +44,9 @@
   width: 30px;
   @include screen-xs {
     margin: 13px;
+    position: absolute;
+    right: 0;
+    z-index: 1;
   };
 }
 
@@ -206,5 +209,15 @@
       height: 100%;
       padding: 60px 0;
     }
+  }
+}
+
+/* [Wedding Atelier - Size Guide Modal]
+-------------------------------------------------------*/
+.size-guide-modal {
+  .modal-body-container {
+    @include screen-xs{
+      padding-top: 60px;
+    };
   }
 }
